--- a/src/main/resources/templates/hrEdit.html
+++ b/src/main/resources/templates/hrEdit.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8" />
 </head>
 <body>
-<h1>Edytuj kampanię </h1>
-<a th:href="@{/campaigns/list}">Wróć do listy kampanii</a>
+<h1>Edytuj HR </h1>
+<a th:href="@{/hrs/list}">Wróć do listy HR</a>
 <br/>
-<h2 th:text="${accountError} ? 'Przekroczony budżet sprzedawcy' : ''" />
 
 <br/><br/>
-<form th:action="@{/campaigns/{id}(id=${campaign.id})}"
-      th:object="${campaign}" th:method="PUT">
+<form th:action="@{/hrs/{id}(id=${hr.id})}"
+      th:object="${hr}" th:method="PUT">
   <div th:if="${#fields.hasErrors()}">
             <span class="validationError">
                 Usun problemy, sprobuj ponownie
@@ -21,10 +20,10 @@
     <tr>
       <td>ID</td>
       <td>:</td>
-      <td th:utext="${campaign.id}">ID</td>
+      <td th:utext="${hr.id}">ID</td>
     </tr>
     <tr>
-      <td>Nazwa kampanii</td>
+      <td>Nazwa</td>
       <td>:</td>
       <td>
         <input type="text" th:field="*{name}" />
@@ -37,10 +36,14 @@
       <td>Produkt</td>
       <td>:</td>
       <td>
-        <select th:field="*{product}">
-          <option th:each="product : ${products}"
-                  th:value="${product.id}"
-                  th:text="${product}">PRODUKT
+        <input type="hidden" th:field="*{id}" />
+        <label for="positions">Posady (wybierz):</label>
+        <br />
+        <select id="positions" th:field="*{positions}" size="10" multiple="multiple">
+          <option th:each="position : ${positions}"
+                  th:value="${{position}}"
+                  th:text="${position.name}">
+            Position
           </option>
         </select>
         <span class="validationError"
@@ -48,66 +51,9 @@
               th:errors="*{product}"></span>
       </td>
     </tr>
-    <tr>
-      <td>Opłata</td>
-      <td>:</td>
-      <td>
-        <input type="text" th:field="*{bid}" />
-        <span class="validationError"
-              th:if="${#fields.hasErrors('bid')}"
-              th:errors="*{bid}"></span>
-      </td>
-    </tr>
-    <tr>
-      <td>Dostępne środki</td>
-      <td>:</td>
-      <td>
-        <input type="text" th:field="*{fund}" />
-        <span class="validationError"
-              th:if="${#fields.hasErrors('fund')}"
-              th:errors="*{fund}"></span>
-      </td>
-    </tr>
-    <tr>
-      <td>Miasto</td>
-      <td>:</td>
-      <td>
-        <select th:field="*{city}">
-          <option th:each="city : ${cities}"
-                  th:value="${city.id}"
-                  th:text="${city}">MIASTO
-          </option>
-        </select>
-        <span class="validationError"
-              th:if="${#fields.hasErrors('city')}"
-              th:errors="*{city}"></span>
-      </td>
-    </tr>
-    <tr>
-      <td>Promień</td>
-      <td>:</td>
-      <td>
-        <input type="text" th:field="*{radius}"/>
-        <span class="validationError"
-              th:if="${#fields.hasErrors('radius')}"
-              th:errors="*{radius}"></span>
-      </td>
-    </tr>
-    <tr>
-      <td>Słowa kluczowe</td>
-      <td>:</td>
-      <td>
-        <input type="text" th:field="*{keywords}"/>
-        <span class="validationError"
-              th:if="${#fields.hasErrors('keywords')}"
-              th:errors="*{keywords}"></span>
-      </td>
-
-    </tr>
   </table>
   <input type="submit" th:value="Aktualizuj" />
 </form>
-
 
 <br/>
 </body>
