--- a/src/main/resources/templates/companyEdit.html
+++ b/src/main/resources/templates/companyEdit.html
@@ -54,9 +54,9 @@
         </select>
         <br />
 
-        <span class="validationError"
-              th:if="${#fields.hasErrors('product')}"
-              th:errors="*{product}"></span>
+<!--        <span class="validationError"-->
+<!--              th:if="${#fields.hasErrors('hr')}"-->
+<!--              th:errors="*{hrLady}"></span>-->
       </td>
     </tr>
   </table>
