--- a/src/main/resources/templates/companyEdit.html
+++ b/src/main/resources/templates/companyEdit.html
@@ -55,8 +55,8 @@
         <br />
 
         <span class="validationError"
-              th:if="${#fields.hasErrors('product')}"
-              th:errors="*{product}"></span>
+              th:if="${#fields.hasErrors('hr')}"
+              th:errors="*{hr}"></span>
       </td>
     </tr>
   </table>
