--- a/src/main/resources/templates/skillEdit.html
+++ b/src/main/resources/templates/skillEdit.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
 </head>
 <body>
-<h1>Edytuj kampanię </h1>
-<a th:href="@{/campaigns/list}">Wróć do listy kampanii</a>
+<h1>Edytuj umiejetnosc </h1>
+<a th:href="@{/skills/list}">Wróć do listy umiejetnosci</a>
 <br/>
 
 <br/><br/>
-<form th:action="@{/campaigns/{id}(id=${campaign.id})}"
-      th:object="${campaign}" th:method="PUT">
+<form th:action="@{/skills/{id}(id=${skill.id})}"
+      th:object="${skill}" th:method="PUT">
   <div th:if="${#fields.hasErrors()}">
             <span class="validationError">
                 Usun problemy, sprobuj ponownie
@@ -20,10 +20,10 @@
     <tr>
       <td>ID</td>
       <td>:</td>
-      <td th:utext="${campaign.id}">ID</td>
+      <td th:utext="${skill.id}">ID</td>
     </tr>
     <tr>
-      <td>Nazwa kampanii</td>
+      <td>Nazwa umiejetnosci</td>
       <td>:</td>
       <td>
         <input type="text" th:field="*{name}" />
@@ -31,77 +31,6 @@
               th:if="${#fields.hasErrors('name')}"
               th:errors="*{name}"></span>
       </td>
-    </tr>
-    <tr>
-      <td>Produkt</td>
-      <td>:</td>
-      <td>
-        <select th:field="*{product}">
-          <option th:each="product : ${products}"
-                  th:value="${product.id}"
-                  th:text="${product}">PRODUKT
-          </option>
-        </select>
-        <span class="validationError"
-              th:if="${#fields.hasErrors('product')}"
-              th:errors="*{product}"></span>
-      </td>
-    </tr>
-    <tr>
-      <td>Opłata</td>
-      <td>:</td>
-      <td>
-        <input type="text" th:field="*{bid}" />
-        <span class="validationError"
-              th:if="${#fields.hasErrors('bid')}"
-              th:errors="*{bid}"></span>
-      </td>
-    </tr>
-    <tr>
-      <td>Dostępne środki</td>
-      <td>:</td>
-      <td>
-        <input type="text" th:field="*{fund}" />
-        <span class="validationError"
-              th:if="${#fields.hasErrors('fund')}"
-              th:errors="*{fund}"></span>
-      </td>
-    </tr>
-    <tr>
-      <td>Miasto</td>
-      <td>:</td>
-      <td>
-        <select th:field="*{city}">
-          <option th:each="city : ${cities}"
-                  th:value="${city.id}"
-                  th:text="${city}">MIASTO
-          </option>
-        </select>
-        <span class="validationError"
-              th:if="${#fields.hasErrors('city')}"
-              th:errors="*{city}"></span>
-      </td>
-    </tr>
-    <tr>
-      <td>Promień</td>
-      <td>:</td>
-      <td>
-        <input type="text" th:field="*{radius}"/>
-        <span class="validationError"
-              th:if="${#fields.hasErrors('radius')}"
-              th:errors="*{radius}"></span>
-      </td>
-    </tr>
-    <tr>
-      <td>Słowa kluczowe</td>
-      <td>:</td>
-      <td>
-        <input type="text" th:field="*{keywords}"/>
-        <span class="validationError"
-              th:if="${#fields.hasErrors('keywords')}"
-              th:errors="*{keywords}"></span>
-      </td>
-
     </tr>
   </table>
   <input type="submit" th:value="Aktualizuj" />
