--- a/src/main/resources/templates/candidateList.html
+++ b/src/main/resources/templates/candidateList.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Lista kandydatow</title>
+    <meta charset="UTF-8">
+    <title>Lista kandydatow</title>
 </head>
 
 <body>
@@ -11,30 +11,30 @@
 <h1>Lista kandydatow</h1>
 
 <table>
-  <tr>
-    <th>Imie</th>
-    <th>Nazwisko</th>
-    <th>Umiejetnosci</th>
-    <th>Znajomosc</th>
-    <th>Edytuj</th>
-    <th>Usuń</th>
-  </tr>
-  <tr th:each ="candidate : ${candidates}">
-    <td th:text="${candidate.name}">NAME</td>
-    <td th:text="${candidate.surname}">SURNAME</td>
-    <td th:text="${candidate.skills.value}">SKILL NAME</td>
-    <td th:text="${candidate.skills.key}">SKILL LEVEL</td>
-    <td>
-      <a th:href="@{/candidates/{id}(id=${candidate.id})}">
-        <input type="submit" value="Edytuj"/>
-      </a>
-    </td>
-    <td>
-      <form th:action="@{/candidates/{id}(id=${candidate.id})}" th:method="DELETE">
-        <input type = "submit" value="Usuń"/>
-      </form>
-    </td>
-  </tr>
+    <tr>
+        <th>Imie</th>
+        <th>Nazwisko</th>
+        <th>Umiejetnosci</th>
+        <th>Znajomosc</th>
+        <th>Edytuj</th>
+        <th>Usuń</th>
+    </tr>
+    <tr th:each="candidate : ${candidates}">
+        <td th:text="${candidate.name}">NAME</td>
+        <td th:text="${candidate.surname}">SURNAME</td>
+        <td th:text="${candidate.skills.name}">SKILL NAME</td>
+        <td th:text="${candidate.skills.experience}">SKILL LEVEL</td>
+        <td>
+            <a th:href="@{/candidates/{id}(id=${candidate.id})}">
+                <input type="submit" value="Edytuj"/>
+            </a>
+        </td>
+        <td>
+            <form th:action="@{/candidates/{id}(id=${candidate.id})}" th:method="DELETE">
+                <input type="submit" value="Usuń"/>
+            </form>
+        </td>
+    </tr>
 </table>
 
 
