--- a/src/main/resources/templates/skillEdit.html
+++ b/src/main/resources/templates/skillEdit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
 </head>
 <body>
 <h1>Edytuj umiejetnosc </h1>
@@ -11,29 +11,35 @@
 <br/><br/>
 <form th:action="@{/skills/{id}(id=${skill.id})}"
       th:object="${skill}" th:method="PUT">
-  <div th:if="${#fields.hasErrors()}">
+    <div th:if="${#fields.hasErrors()}">
             <span class="validationError">
                 Usun problemy, sprobuj ponownie
             </span>
-  </div>
-  <table>
-    <tr>
-      <td>ID</td>
-      <td>:</td>
-      <td th:utext="${skill.id}">ID</td>
-    </tr>
-    <tr>
-      <td>Nazwa umiejetnosci</td>
-      <td>:</td>
-      <td>
-        <input type="text" th:field="*{name}" />
-        <span class="validationError"
-              th:if="${#fields.hasErrors('name')}"
-              th:errors="*{name}"></span>
-      </td>
-    </tr>
-  </table>
-  <input type="submit" th:value="Aktualizuj" />
+    </div>
+    <table>
+        <tr>
+            <td>Nazwa umiejetnosci</td>
+            <td>:</td>
+            <td>
+                <input type="text" th:field="*{name}"/>
+                <span class="validationError"
+                      th:if="${#fields.hasErrors('name')}"
+                      th:errors="*{name}"></span>
+            </td>
+        </tr>
+        <tr>
+            <td>Doswiadczenie</td>
+            <td>:</td>
+            <td>
+                <select name="experience">
+                    <option th:each="expOpt : ${T(pl.zabd.zabd_projekt2.model.IExperience.values()}"
+                            th:value="${expOpt}" th:text="${expOpt}"></option>
+                </select>
+            </td>
+        </tr>
+
+    </table>
+    <input type="submit" value="Aktualizuj"/>
 </form>
 
 
