--- a/src/main/resources/templates/candidateForm.html
+++ b/src/main/resources/templates/candidateForm.html
@@ -30,6 +30,9 @@
           th:errors="*{surname}"></span>
     <br/>
 
+    <br/>
+    <h3>Dodaj umiejetnosci</h3>
+
     <label for="skills.name">Umiejetnosc: </label>
     <input type="text" th:field="*{skills.name}"/>
     <span class="validationError"
@@ -47,7 +50,6 @@
       TODO: wypelnienie listy
     -->
     <input class="addskill" type="submit" value="Dodaj umiejetnosc" th:formaction="'/save-post/'+${post.id}">
-
     <table class="table table-striped table-bordered ">
         <tr>
             <th>Umiejetnosc</th>
